# Mart_Project_kafka_Fastapi

./: README.md  compose.yml  mypi.ini
mart_project/: Dockerfile  pyproject.toml
mart_project/mart_project/: main.py
mart_project/mart_project/user/: auth.py  db.py  router.py  schema.py  user.proto  user.py
