[tool.poetry]
name = "mart-project"
version = "0.1.0"
description = ""
authors = ["Hamadalishah <hammadalis459@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = "^0.31.0"
kafka = "^1.3.5"
aiokafka = "^0.11.0"
types-requests = "^2.32.0.20240914"
protobuf = "^5.28.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
